--- a/index.html
+++ b/index.html
@@ -1,13 +1,77 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>LUẬT KINH DOANH BẢO HIỂM 2022</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <style>
+    html,
+    body {
+      font-family: "Times New Roman", Times, serif;
+      font-size: 16px;
+    }
+
+    .highlight {
+      background-color: yellow;
+      cursor: pointer;
+      display: inline-block;
+    }
+  </style>
+</head>
+
+<body class="py-5">
+  <div class="container p-3 rounded border" style="max-width: 1000px;">
+    <h4 class="text-center mb-4 fw-bold text-primary">LUẬT KINH DOANH BẢO HIỂM 2022</h4>
+
+    <section>
+      <div class="fw-bold highlight" data-bs-toggle="modal" data-bs-target="#myModal">Điều 1. Phạm vi điều chỉnh</div>
+      <p>
+        1. Luật này quy định về tổ chức và hoạt động kinh doanh bảo hiểm; quyền và nghĩa vụ của tổ chức, cá nhân tham gia bảo hiểm; quản lý nhà nước về hoạt động kinh doanh bảo hiểm.
+        2. Luật này không áp dụng đối với bảo hiểm xã hội, bảo hiểm y tế, bảo hiểm tiền gửi và các loại bảo hiểm khác do Nhà nước thực hiện không mang tính kinh doanh.
+      </p>
+
+      <div class="modal fade" id="myModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable modal-xl">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <b class="text-primary">Luật kinh doanh bảo hiểm 2022</b>
+              <div class="p-2 mb-4" style="border-left: 4px solid #9eeaf9; color: #055160; background-color: #cff4fc;">
+                <p>
+                  1. Luật này quy định về tổ chức và hoạt động kinh doanh bảo hiểm; quyền và nghĩa vụ của tổ chức, cá nhân tham gia bảo hiểm; quản lý nhà nước về hoạt động kinh doanh bảo hiểm.
+                  2. Luật này không áp dụng đối với bảo hiểm xã hội, bảo hiểm y tế, bảo hiểm tiền gửi và các loại bảo hiểm khác do Nhà nước thực hiện không mang tính kinh doanh.
+                </p>
+              </div>
+
+              <div class="row">
+                <div class="col-md-6 mb-3">
+                  <b class="text-primary">Nghị định 46/2022/NĐ-CP</b>
+                  <div class="border rounded p-2">
+                    Điều 1. Phạm vi điều chỉnh
+                    Nghị định này quy định chi tiết thi hành khoản 2 Điều 6, khoản 2 Điều 7, khoản 5 Điều 11, điểm b khoản 1 Điều 64, điểm a khoản 2 Điều 64, khoản 3 Điều 65, điểm đ khoản 1 Điều 67, điểm a khoản 2 Điều 67, khoản 6 Điều 69, khoản 4 Điều 71, khoản 4 Điều 74, khoản 2 Điều 77, khoản 5 Điều 81, khoản 4 Điều 83, khoản 5 Điều 87, khoản 1 Điều 89, khoản 3 Điều 93, khoản 6 Điều 94, khoản 4 Điều 97, khoản 2 Điều 98, điểm b khoản 1 và khoản 5 Điều 99, khoản 5 Điều 100, khoản 3 Điều 101, khoản 2 Điều 102, khoản 3 Điều 115, điểm d khoản 2 Điều 125, điểm b khoản 1 và điểm a khoản 2 Điều 133, khoản 2 Điều 134, khoản 4 Điều 136, khoản 1 và khoản 3 Điều 138, khoản 3 Điều 143, khoản 1 Điều 152, khoản 3 Điều 156, điểm b khoản 5 Điều 157 Luật Kinh doanh bảo hiểm.
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <b class="text-primary">Thông tin 67/2023/TT-BTC</b>
+                  <div class="border rounded p-2">
+                    "Điều 1. Phạm vi điều chỉnh
+                    1. Thông tư này quy định chi tiết khoản 3 Điều 14, khoản 2 Điều 17, khoản 4 Điều 76, khoản 4 Điều 82, khoản 6 Điều 87, khoản 5 Điều 89, khoản 4 Điều 101, khoản 4 Điều 105, khoản 3 Điều 106, khoản 2 Điều 117, khoản 2 Điều 120, điểm c khoản 1 và các điểm đ, k khoản 2 Điều 128, khoản 4 Điều 129, điểm a khoản 1 và điểm c khoản 2 Điều 137, khoản 5 Điều 138, khoản 4 Điều 145 Luật Kinh doanh bảo hiểm.
+                    2. Thông tư hướng dẫn khoản 6 Điều 7, điểm c khoản 2 Điều 32, Điều 44, khoản 7 Điều 49 Nghị định số 46/2023/NĐ-CP ngày 01 tháng 7 năm 2023 của Chính phủ quy định chi tiết thi hành một số điều của Luật Kinh doanh bảo hiểm (sau đây gọi là Nghị định số 46/2023/NĐ-CP), bao gồm biểu mẫu các thông tin của cơ sở dữ liệu về hoạt động kinh doanh bảo hiểm; mẫu tài liệu giải trình phương pháp, cơ sở tính phí bảo hiểm; hướng dẫn, minh họa các phương pháp, công thức, cơ sở trích lập dự phòng nghiệp vụ; thời điểm ghi nhận doanh thu đối với từng loại hình bảo hiểm.
+                    Điều 2. Đối tượng áp dụng"
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+</body>
+
 </html>
